--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     font-family: 'Poppins', sans-serif;
     font-family: 'Roboto Slab', serif;
-
 }
+
 
 * {
     margin: 0;
@@ -10,12 +10,39 @@ body {
 }
 
 .header-section {
-    background-image: url(image/beac.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), #04ebd4), url(image/beac.jpg);
     background-position: center;
     background-size: cover;
     height: 100vh;
     width: 100%;
     background-repeat: no-repeat;
 
+}
 
+.header-div {
+    position: absolute;
+    color: white;
+    margin-left: 20%;
+    margin-right: 40%;
+    margin-top: 10%;
+
+}
+
+h1 {
+    font-size: 50px;
+}
+
+.link-button {
+    position: absolute;
+    text-decoration: none;
+    background-color: rgb(241, 54, 54);
+    color: white;
+    padding: 5px 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+
+.link-button:hover {
+    background-color: white;
+    color: red;
 }
