--- a/style.css
+++ b/style.css
@@ -101,11 +101,7 @@ h1 {
     background-color: rgb(234, 228, 221);
     padding: 15px;
     border-radius: 10px;
-
-
-
 }
-
 
 .gird-img {
     margin-left: 5%;
@@ -113,9 +109,57 @@ h1 {
 
 }
 
-#paa {
+.img-section {
+    width: 50%;
+    margin-top: 10%;
+    margin-left: 3%;
+    margin-right: 3%;
+
+
+}
+
+.img-section img {
+    width: 100%;
+    height: 90%;
+
+}
+
+.extend {
+    text-align: center;
+    margin: 5% 25%
+}
+
+.donate {
+    display: flex;
+
+}
+
+.img-collection {
+    margin: 20px;
+    border: solid 1px gray;
+    border-radius: 15px;
+    height: 500px;
+}
+
+.img-collection img {
+    width: 100%;
+    height: 50%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+
+}
+
+.img-collection h3 {
+    margin-left: 15px;
+    margin-top: 30px;
+    color: cornflowerblue;
+}
+
+.img-collection p {
+    margin: 15px;
+}
+
+.img-collection a {
+    margin-left: 15px;
     color: red;
-
-
-
 }
