--- a/style.css
+++ b/style.css
@@ -163,3 +163,26 @@ h1 {
     margin-left: 15px;
     color: red;
 }
+
+footer {
+    background-color: black;
+    height: 200px;
+    margin-top: 5%;
+    color: red;
+}
+
+footer h2 {
+    text-align: center;
+    margin-top: 3%;
+    position: absolute;
+    margin-left: 40%;
+    font-family: 'Lobster', cursive;
+}
+
+footer p {
+    text-align: center;
+    margin-top: 8%;
+    margin-left: 45%;
+    position: absolute;
+    font-weight: 700;
+}
